k8s-specs-bg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-microservice-service
  namespace: rust-microservice-namespace
spec:
  selector:
    app: rust-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
