k8s-specs-bg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rust-microservice-ingress
  namespace: rust-microservice-namespace
spec:
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rust-microservice-service
                port:
                  number: 80
